Drop support for Python 2.5, 2.6

--- a/README
+++ b/README
@@ -24,7 +24,7 @@ Or::
 Requirements
 ------------
 
-- CPython 2.5, 2.6, 2.7, Jython 2.5.3 or PyPy 2.0.2
+- CPython 2.7, Jython 2.7 or PyPy 2.0.2
 - `setuptools <http://pypi.python.org/pypi/setuptools>`_
 - `pycrypto <https://pypi.python.org/pypi/pycrypto>`_ (optional, to decode distribution docs)
 
