--- a/CHANGES
+++ b/CHANGES
@@ -4,17 +4,17 @@ CHANGES
 0.1b9 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Drop support for Python 2.5, 2.6.
 
 
 0.1b8 (2014-11-03)
 ------------------
 
-- hwp5view: experimental viewer with webkitgtk+ 
+- hwp5view: experimental viewer with webkitgtk+
 - hwp5proc: xml --formats ("flat", "nested")
-- hwp5proc: models --events (experimental) 
+- hwp5proc: models --events (experimental)
 - hwp5proc: models --seqno --format (incompatible changes)
-- hwp5proc: find --from-stdin 
+- hwp5proc: find --from-stdin
 - hwp5proc: find --format
 - binmodels: GShapeObjectCaption
 - olestorage: Gsf implementation through python-gi
