--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ CHANGES
 - Prefer 'olefile' to 'OleFileIO_PL'.
 - Fix 'Dutmal' control attribute names.
 - hwp5html: represent path names in bytes
+- Declare some dependencies with environment markers: olefile, lxml, pycrypto
 
 
 0.1b8 (2014-11-03)
