--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.1b10 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1b9 (2016-02-26)
 ------------------
 
