--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.1b12 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1b11 (2019-03-21)
 -------------------
 
