--- a/README
+++ b/README
@@ -30,7 +30,7 @@ Requirements
 Documentation & Development
 ---------------------------
 
-- Documentation: `https://pyhwp.readthedocs.io <https://pyhwp.readthedocs.io>`_ [`한국/조선어 <https://readthedocs.io/ko/latest>`_]
+- Documentation: `https://pyhwp.readthedocs.io <https://pyhwp.readthedocs.io>`_ [`한국/조선어 <https://pyhwp.readthedocs.io/ko/latest>`_]
 - Distribution: `http://pypi.python.org/pypi/pyhwp <http://pypi.python.org/pypi/pyhwp>`_
 - Development: `https://github.com/mete0r/pyhwp <https://github.com/mete0r/pyhwp>`_
 - Issue tracker: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_
