Back to development: 0.1b13

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.1b13 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1b12 (2019-04-08)
 -------------------
 
