--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ CHANGES
 0.1b13 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Replace docopt with argparse.
 
 
 0.1b12 (2019-04-08)
