--- a/pyhwp/hwp5/locale/ko/LC_MESSAGES/hwp5odt.po
+++ b/pyhwp/hwp5/locale/ko/LC_MESSAGES/hwp5odt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1b9.dev0\n"
 "Report-Msgid-Bugs-To: mete0r@sarangbang.or.kr\n"
-"POT-Creation-Date: 2017-10-09 00:54+0900\n"
+"POT-Creation-Date: 2019-04-10 22:55+0900\n"
 "PO-Revision-Date: 2017-10-09 00:54+0900\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: ko\n"
@@ -17,4 +17,44 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.5.0\n"
+
+#: pyhwp/hwp5/hwp5odt.py:376
+msgid "HWPv5 to odt converter"
+msgstr "HWPv5 ODT 변환기"
+
+#: pyhwp/hwp5/hwp5odt.py:385
+msgid "Set log level."
+msgstr "로그 수준 지정"
+
+#: pyhwp/hwp5/hwp5odt.py:389
+msgid "Set log file."
+msgstr "로그 파일 지정"
+
+#: pyhwp/hwp5/hwp5odt.py:393
+msgid "Output file"
+msgstr "출력 파일"
+
+#: pyhwp/hwp5/hwp5odt.py:398
+msgid ".hwp file to convert"
+msgstr "변환할 .hwp 파일"
+
+#: pyhwp/hwp5/hwp5odt.py:404
+msgid "Generate styles.xml"
+msgstr "styles.xml 생성"
+
+#: pyhwp/hwp5/hwp5odt.py:409
+msgid "Generate content.xml"
+msgstr "content.xml 생성"
+
+#: pyhwp/hwp5/hwp5odt.py:414
+msgid "Generate .fodt"
+msgstr ".fodt 생성"
+
+#: pyhwp/hwp5/hwp5odt.py:420
+msgid "Embed images in output xml."
+msgstr "화상을 출력 xml에 내장"
+
+#: pyhwp/hwp5/hwp5odt.py:425
+msgid "Do not embed images in output xml."
+msgstr "화상을 출력 xml에 내장하지 않음"
 
