--- a/pyhwp/hwp5/locale/ko/LC_MESSAGES/hwp5txt.po
+++ b/pyhwp/hwp5/locale/ko/LC_MESSAGES/hwp5txt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1b9.dev0\n"
 "Report-Msgid-Bugs-To: mete0r@sarangbang.or.kr\n"
-"POT-Creation-Date: 2017-10-09 00:54+0900\n"
+"POT-Creation-Date: 2019-04-10 22:55+0900\n"
 "PO-Revision-Date: 2017-10-09 00:54+0900\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: ko\n"
@@ -17,4 +17,24 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.5.0\n"
+
+#: pyhwp/hwp5/hwp5txt.py:95
+msgid "HWPv5 to txt converter"
+msgstr "HWPv5 txt 변환기"
+
+#: pyhwp/hwp5/hwp5txt.py:104
+msgid "Set log level."
+msgstr "로그 수준 지정"
+
+#: pyhwp/hwp5/hwp5txt.py:108
+msgid "Set log file."
+msgstr "로그 파일 지정"
+
+#: pyhwp/hwp5/hwp5txt.py:112
+msgid "Output file"
+msgstr "출력 파일"
+
+#: pyhwp/hwp5/hwp5txt.py:117
+msgid ".hwp file to convert"
+msgstr "변환할 .hwp 파일"
 
