--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.1b14 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1b13 (2020-05-17)
 -------------------
 
