--- a/README
+++ b/README
@@ -24,14 +24,14 @@ Or::
 Requirements
 ------------
 
-- CPython 2.7, Jython 2.7 or PyPy >= 2.0.2
+- Python 2.7, 3.5, 3.6, 3.7 or 3.8
 - `lxml <https://pypi.org/project/lxml>`_ (optional)
 
 Documentation & Development
 ---------------------------
 
 - Documentation: `https://pyhwp.readthedocs.io <https://pyhwp.readthedocs.io>`_ [`한국/조선어 <https://pyhwp.readthedocs.io/ko/latest>`_]
-- Distribution: `http://pypi.python.org/pypi/pyhwp <http://pypi.python.org/pypi/pyhwp>`_
+- Distribution: `https://pypi.org/project/pyhwp/ <https://pypi.org/project/pyhwp/>`_
 - Development: `https://github.com/mete0r/pyhwp <https://github.com/mete0r/pyhwp>`_
 - Issue tracker: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_
 - Feedbacks & contributions are welcome!
