--- a/README
+++ b/README
@@ -46,7 +46,7 @@ Maintainer: `mete0r <https://github.com/mete0r>`_
 License
 -------
 
-Copyright (C) 2010-2018 mete0r <mete0r@sarangbang.or.kr>
+Copyright (C) 2010-2020 mete0r <https://github.com/mete0r>
 
 .. image:: http://www.gnu.org/graphics/agplv3-155x51.png
 
