Back to development: 0.1b16

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+0.1b16 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1b15 (2020-05-30)
 -------------------
 
